<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FormActivity"
    android:background="@color/colorAccent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="14dp"
            android:paddingLeft="14dp">


            <TextView
                android:id="@+id/nav_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="ورود و ثبت متن"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/iransansmobile_medium"
                android:textColor="@color/colorThemeWhite"/>

            <ImageButton
                android:id="@+id/nav_close_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="8dp"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/ic_close_white"
                android:background="@android:color/transparent"
                />
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/form_container_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:visibility="invisible"/>

            <LinearLayout
                android:id="@+id/login_form_container_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/login_ask_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:fontFamily="@font/iransansmobile_medium"
                        android:textColor="@color/colorThemeWhite"
                        android:gravity="right"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="5dp"
                        android:text="@string/login_ask"/>

                    <Button
                        android:id="@+id/login_ask_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17dp"
                        android:layout_toLeftOf="@id/login_ask_text_view"
                        android:fontFamily="@font/iransansmobile_bold"
                        android:text="@string/login_ask_button"
                        android:layout_alignBaseline="@id/login_ask_text_view"/>
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/username_validation_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/iransansmobile"
                        android:text="@string/username_validation_message"
                        android:visibility="gone"/>

                    <EditText
                        android:id="@+id/username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iransansmobile"
                        android:imeOptions="actionNext"
                        android:hint="نام کاربری"
                        android:inputType="textPersonName"
                        android:focusableInTouchMode="true"
                        android:maxLines="1"
                        android:gravity="right"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_container_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/email_validation_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/iransansmobile"
                        android:text="@string/email_validation_message"
                        android:visibility="gone"/>

                    <EditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="ایمیل (اختیاری)"
                        android:imeOptions="actionNext"
                        android:fontFamily="@font/iransansmobile"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/password_validation_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/iransansmobile"
                        android:text="@string/password_validation_message"
                        android:visibility="gone"/>

                    <EditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="گذرواژه"
                        android:imeOptions="actionNext"
                        android:inputType="textVisiblePassword"
                        android:fontFamily="@font/iransansmobile"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/message_validation_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/iransansmobile"
                    android:text="@string/message_validation_message"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/message_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iransansmobile"
                    android:inputType="textMultiLine"
                    android:hint="متن پیام"/>
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/loading_progress_bar"
                android:layout_marginTop="16dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <Button
                android:id="@+id/submit_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/iransansmobile"
                android:text="انجام"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@android:color/transparent"
                android:visibility="invisible"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>